--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,27 @@
 <html>
+    <head>
+        <title>
+            article one sujay gijre
+            </title>
+        </head>
+        <body>
+            <div>
+                <a href="/"></a>
+                </div>
+                <hr/>
+                <h3>article one</h3>
+                <div>sept 5 2016</div>
+                <div>
+                    <p>
+                    this a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first aricle
+                    </p>
+                     <p>
+                    this a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first aricle
+                    </p>
+                     <p>
+                    this a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first aricle
+                    </p>
+                    </div>
+            </body>
+            
 </html>
