[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -7,7 +7,7 @@
         </head>
         <body>
             <div>
-               
+                <a href="/"></a>
                 </div>
                 <hr/>
                 <h3>article one</h3>
