--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,8 +4,18 @@
             article one sujay gijre
             </title>
             <meta name="viewport" content="width+device+width,initial-scale=1"/>
+            <style>
+            .container{
+                max-width:800px;
+                margin: 0 auto;
+                color:grey;
+                font-family="san serif"
+                ;
+            }
+            </style>
         </head>
         <body>
+            <div class="container">
             <div>
                 <a href="/"></a>
                 </div>
@@ -23,6 +33,6 @@
                     this a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first aricle
                     </p>
                     </div>
-            </body>
+            </div>
             
 </html>
