--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,11 +6,13 @@
             <meta name="viewport" content="width+device+width,initial-scale=1"/>
             <style>
             .container{
-                max-width:800px;
-                margin: 0 auto;
-                color:grey;
-                font-family="san serif"
-                ;
+               max-width: 800px;
+    margin: 0 auto;
+    color: #2d2b2b;
+    font-family: sans-serif;
+    padding-top: 60px;
+    padding-left: 25px;
+    padding-right: 25px;
             }
             </style>
         </head>
