[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -19,7 +19,7 @@
         <body>
             <div class="container">
             <div>
-                <a href="/"></a>
+                <a href="/">HOME</a>
                 </div>
                 <hr/>
                 <h3>article one</h3>
