[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,37 +4,28 @@
             article one sujay gijre
             </title>
             <meta name="viewport" content="width+device+width,initial-scale=1"/>
-            <style>
-            .container{
-               max-width: 800px;
-    margin: 0 auto;
-    color: #2d2b2b;
-    font-family: sans-serif;
-    padding-top: 60px;
-    padding-left: 25px;
-    padding-right: 25px;
-            }
-            </style>
-        </head>
-        <body>
+             <link href="/ui/style.css" rel="stylesheet" />
+          
+            </head>
+            <body>
             <div class="container">
             <div>
-                <a href="/">HOME</a>
-                </div>
-                <hr/>
-                <h3>article one</h3>
-                <div>sept 5 2016</div>
-                <div>
-                    <p>
-                    this a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first aricle
-                    </p>
-                     <p>
-                    this a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first aricle
-                    </p>
-                     <p>
-                    this a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first aricle
-                    </p>
-                    </div>
+            <a href="/">HOME</a>
+            </div>
+            <hr/>
+            <h3>article one</h3>
+            <div>sept 5 2016</div>
+            <div>
+            <p>
+            this a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first aricle
+            </p>
+             <p>
+            this a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first aricle
+            </p>
+             <p>
+            this a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first ariclethis a text for my first aricle
+            </p>
+            </div>
             </div>
             
-</html>
+            </html>
