[imad-console] Updates ui/article-third.html

--- a/ui/article-third.html
+++ b/ui/article-third.html
@@ -4,10 +4,11 @@
             article third sujay gijre
             </title>
             <meta name="viewport" content="width+device+width,initial-scale=1"/>
+             <link href="/ui/style.css" rel="stylesheet" />
         </head>
         <body>
             <div>
-                <a href="/"></a>
+                <a href="/">HOME</a>
                 </div>
                 <hr/>
                 <h3>article third</h3>
